Full initial list of eligible voters
Signed-off-by: Bridget Kromhout <bridget@kromhout.org>

--- a/elections/steering/2023/voters.yaml
+++ b/elections/steering/2023/voters.yaml
@@ -15,8 +15,12 @@
 eligible_voters:
 - '249043822'
 - 196Ikuchil
+- a-hilaly
 - a-mccarthy
+- a7i
+- abhay-krishna
 - adisky
+- adrianludwin
 - afbjorklund
 - ahg-g
 - AhmedGrati
@@ -30,6 +34,7 @@ eligible_voters:
 - alculquicondor
 - aleksandra-malinowska
 - alexander-demicev
+- alexander-ding
 - alexanderConstantinescu
 - alexeldeib
 - alexzielenski
@@ -56,10 +61,12 @@ eligible_voters:
 - Argh4k
 - Arhell
 - ArkaSaha30
+- arkodg
 - aroradaman
 - aryan9600
 - asa3311
 - ash2k
+- Ashley-wenyizha
 - asim-reza
 - astoycos
 - astraw99
@@ -89,6 +96,7 @@ eligible_voters:
 - byako
 - cailynse
 - camilamacedo86
+- campoy
 - carlory
 - cartermckinnon
 - CatherineF-dev
@@ -98,16 +106,19 @@ eligible_voters:
 - CecileRobertMichon
 - celestehorgan
 - cezarygerard
+- champtar
 - chaodaiG
 - charles-chenzz
 - cheftako
 - chendave
 - chengxiangdong
+- chethanv28
 - chiukapoor
 - chris-short
 - chrischdi
 - chrisdoherty4
 - chrishenzie
+- chrismetz09
 - chrisnegus
 - christopherhein
 - cici37
@@ -116,11 +127,13 @@ eligible_voters:
 - cjwagner
 - claudiubelu
 - code-elinka
+- codefromthecrypt
 - coderanger
 - ConnorJC3
 - cpanato
 - cprivitere
 - craigbox
+- cristicalin
 - csantanapr
 - cvvz
 - cyclinder
@@ -134,6 +147,7 @@ eligible_voters:
 - daschott
 - dashpole
 - davidjumani
+- davidvossel
 - dchen1107
 - ddebroy
 - deads2k
@@ -161,22 +175,28 @@ eligible_voters:
 - drewhagen
 - droslean
 - dthorsen
+- dtzar
 - dulek
 - Dyanngg
 - eddiezane
 - eddycharly
+- edreed
 - edsoncelio
 - ehashman
+- Eileen-Yu
 - electrocucaracha
 - elmiko
 - endocrimes
 - enj
 - enxebre
+- erikgb
 - ErikJiang
 - esigo
+- everettraven
 - everpeace
 - fabi200123
 - fabriziopandini
+- faiq
 - fedebongio
 - Fedosin
 - Fei-Guo
@@ -185,12 +205,14 @@ eligible_voters:
 - FillZpp
 - Fish-pro
 - floreks
+- floryut
 - fmuyassarov
 - fpetkovski
 - freddie400
 - fredkan
 - fsmunoz
 - furkatgofurov7
+- fuxiuyin
 - g-gaston
 - Garima-Negi
 - Garrybest
@@ -202,6 +224,8 @@ eligible_voters:
 - gjtempleton
 - gman0
 - gnufied
+- gohilankit
+- gomesjason
 - gracenng
 - gujingit
 - gyohuangxin
@@ -210,10 +234,12 @@ eligible_voters:
 - haircommander
 - hakman
 - HanFa
+- hanyuel
 - harche
 - harshanarayana
 - harshitasao
 - helayoty
+- helen-frank
 - heyste
 - hh
 - HirazawaUi
@@ -222,12 +248,12 @@ eligible_voters:
 - howardjohn
 - howieyuen
 - Huang-Wei
+- hughdanliu
 - humblec
 - hwdef
 - hzxuzhonghu
 - ialidzhikov
 - ibihim
-- idvoretskyi
 - iholder101
 - ike-ma
 - imnmo
@@ -236,11 +262,13 @@ eligible_voters:
 - intUnderflow
 - invidian
 - ipochi
+- ityuhui
 - ivelichkovich
 - jackfrancis
 - jacobwolfaws
 - jaehnri
 - JamesLaverack
+- JaneLiuL
 - JAORMX
 - jayantjain93
 - jaypipes
@@ -253,6 +281,7 @@ eligible_voters:
 - jeremyrickard
 - jhrozek
 - jiahuif
+- JiaoDean
 - jichenjc
 - jihoon-seo
 - jimangel
@@ -266,6 +295,7 @@ eligible_voters:
 - joelanford
 - joelsmith
 - JoelSpeed
+- johananl
 - johannesfrey
 - johnbelamaric
 - johngmyers
@@ -275,9 +305,11 @@ eligible_voters:
 - jprzychodzen
 - jsafrane
 - jsturtevant
+- judemars
 - jupblb
 - justaugustus
 - justinsb
+- jweite-amazon
 - jwtty
 - jyotimahapatra
 - jzhupup
@@ -285,8 +317,11 @@ eligible_voters:
 - karenhchu
 - karlkfi
 - Karthik-K-N
+- Kartik494
 - kaslin
 - katcosgrove
+- Kavinjsir
+- kavyashree-r
 - kawych
 - kayrus
 - kbhawkey
@@ -294,8 +329,11 @@ eligible_voters:
 - keithmattix
 - kerthcet
 - kevindelgado
+- kflynn
+- kfox1111
 - kgolab
 - khenidak
+- khoang98
 - kikisdeliveryservice
 - killianmuldoon
 - kinzhi
@@ -327,15 +365,19 @@ eligible_voters:
 - liggitt
 - linki
 - LiorLieberman
+- lipingxue
 - listx
 - liupeng0518
 - lixiaobing1
+- LochanRn
 - logicalhan
 - longwuyuan
 - lubronzhan
 - lukehinds
 - luthermonson
 - lzhecheng
+- m-messiah
+- m00nf1sh
 - maciaszczykm
 - MaciekPytel
 - Madhan-SWE
@@ -349,6 +391,7 @@ eligible_voters:
 - mattcary
 - matthyx
 - mauriciopoppe
+- maxdrib
 - MaxymVlasov
 - mboersma
 - mborsz
@@ -357,9 +400,12 @@ eligible_voters:
 - mdbooth
 - medyagh
 - mehabhalodiya
+- MeinhardZhou
 - mengjiao-liu
 - micahhausler
+- michaelbeaumont
 - michelle192837
+- Michelle951
 - mickeyboxell
 - mikebrow
 - mikedanese
@@ -369,25 +415,34 @@ eligible_voters:
 - mitul3737
 - mk46
 - mkumatag
+- mlavacca
+- mloiseleur
 - mmiranda96
+- mnaser
+- mochizuki875
 - moficodes
 - mohitsharma-in
 - MorrisLaw
 - mortent
 - moshe010
 - moshevayner
+- mowangdk
 - mpherman2
 - mpuckett159
 - mrbobbytables
 - MrErlison
 - mresvanis
+- MrFreezeex
 - mrgiles
 - MrHohn
 - mrueg
 - mrunalp
 - msau42
+- mskanth972
 - mskrocki
 - mtardy
+- mtougeron
+- mukhoakash
 - munnerz
 - mwielgus
 - my-git9
@@ -401,6 +456,7 @@ eligible_voters:
 - nawazkh
 - ncdc
 - nckturner
+- ndipebot
 - ndixita
 - neolit123
 - nikhita
@@ -446,9 +502,11 @@ eligible_voters:
 - pwittrock
 - pwschuurman
 - pydctw
+- qabpea
 - qbarrand
 - qedrakmar
 - qingwave
+- qinqon
 - r-erema
 - RA489
 - raesene
@@ -460,7 +518,9 @@ eligible_voters:
 - rata
 - RaunakShah
 - ravisantoshgudimetla
+- rdpsin
 - reetasingh
+- rejoshed
 - remyleone
 - rexagod
 - reylejano
@@ -486,6 +546,7 @@ eligible_voters:
 - s-kawamura-w664
 - saikat-royc
 - sairameshv
+- Sajiyah-Salat
 - salaxander
 - sallyom
 - sanchezl
@@ -494,6 +555,7 @@ eligible_voters:
 - sanposhiho
 - SaranBalaji90
 - saschagrunert
+- sashrith
 - SataQiu
 - sathyanarays
 - sayantani11
@@ -511,6 +573,7 @@ eligible_voters:
 - serathius
 - SergeyKanzhelev
 - sftim
+- shalini-b
 - shaneutt
 - shannonxtreme
 - shawnhanx
@@ -518,8 +581,10 @@ eligible_voters:
 - shu-mutou
 - Shubham82
 - shurup
+- ShwethaKumbla
 - shyamjvs
 - Skarlso
+- skriss
 - smarterclayton
 - smg247
 - soltysh
@@ -530,6 +595,8 @@ eligible_voters:
 - spiffxp
 - spowelljr
 - srm09
+- starpit
+- stevehipwell
 - stevekuznetsov
 - stlaz
 - stmcginnis
@@ -537,6 +604,7 @@ eligible_voters:
 - stp-ip
 - strongjz
 - sttts
+- sunjayBhatia
 - sunnylovestiramisu
 - sunpa93
 - swatisehgal
@@ -545,6 +613,7 @@ eligible_voters:
 - szuecs
 - t-inu
 - tabbysable
+- Tal-or
 - tallclair
 - tam7t
 - tangwz
@@ -553,6 +622,7 @@ eligible_voters:
 - tengqm
 - tenzen-y
 - TerryHowe
+- tg123
 - thockin
 - timoreimann
 - timwangmusic
@@ -565,6 +635,8 @@ eligible_voters:
 - trasc
 - tssurya
 - ttakahashi21
+- tuxtof
+- tyuchn
 - tzneal
 - uablrek
 - upodroid
@@ -577,6 +649,7 @@ eligible_voters:
 - vinayakankugoyal
 - vinaykul
 - vincepri
+- vinli-cn
 - Virusuki
 - vishesh92
 - vladimirvivien
@@ -586,6 +659,7 @@ eligible_voters:
 - vteratipally
 - Vyom-Yadav
 - wackxu
+- wanyufe
 - weilaaa
 - weizhouapache
 - willie-yao
@@ -593,8 +667,11 @@ eligible_voters:
 - windsonsea
 - wlan0
 - wojtek-t
+- wondywang
 - wongma7
+- wongni
 - wozniakjan
+- wyike
 - wzshiming
 - x13n
 - XDRAGON2002
@@ -616,6 +693,7 @@ eligible_voters:
 - yibozhuang
 - ykakarap
 - yliaog
+- yonatankahana
 - yoonian
 - youngnick
 - ystkfujii
@@ -628,6 +706,7 @@ eligible_voters:
 - yxxhero
 - ZeroMagic
 - zetaab
+- zhanggbj
 - zhangxyjlu
 - Zhuzhenghao
 - zioproto
@@ -635,3 +714,4 @@ eligible_voters:
 - zqzten
 - zshihang
 - zvonkok
+- zwpaper
