Voter eligibility correction
Signed-off-by: Bridget Kromhout <bridget@kromhout.org>

--- a/elections/steering/documentation/template/voters.yaml
+++ b/elections/steering/documentation/template/voters.yaml
@@ -1,7 +1,7 @@
 # {{YEAR}} Steering Committee Election
 ##################################
 #
-# The process for determining elegible voters can be found in
+# The process for determining eligible voters can be found in
 # https://github.com/kubernetes/community/tree/master/elections/steering/{{YEAR}}
 #
 # If you feel you meet the eligibility criteria but do not see your GitHub username
