Archive kpack channel
This channel is archived in favor of https://cloud-native.slack.com/archives/C05GETJ2NP7

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -226,6 +226,7 @@ channels:
   - name: kots
     id: CFFKXV0JZ
   - name: kpack
+    archived: true
   - name: kpt
   - name: kr-dev
   - name: kr-users
