Add sig-auth-certificates-dev slack channel
For discussion around KEPs such as https://kep.k8s.io/3257

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -420,6 +420,7 @@ channels:
   - name: sig-auth
   - name: sig-auth-authenticators-dev
   - name: sig-auth-authorizers-dev
+  - name: sig-auth-certificates-dev
   - name: sig-auth-kms-dev
   - name: sig-auth-triage
   - name: sig-autoscaling
