Update wg-lts info
Signed-off-by: Jeremy Rickard <jeremyrrickard@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3241,19 +3241,19 @@ workinggroups:
       company: Amazon
   meetings:
   - description: Regular WG Meeting
-    day: TBD
-    time: TBD
+    day: Tuesday
+    time: "07:00"
     tz: PT (Pacific Time)
     frequency: biweekly
-    url: TBD
+    url: https://zoom.us/j/92480197536?pwd=dmtSMGJRQmNYYTIyZkFlQ25JRngrdz09
     archive_url: TBD
     recordings_url: TBD
   contact:
     slack: wg-lts
-    mailing_list: TBD
+    mailing_list: https://groups.google.com/a/kubernetes.io/g/wg-lts
     liaison:
-      github: TBD
-      name: TBD
+      github: palnabarun
+      name: Nabarun Pal
 - dir: wg-policy
   name: Policy
   mission_statement: >
