--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2060,7 +2060,7 @@ sigs:
     url: https://zoom.us/j/95680858961?pwd=M1c2TTdMZHpMUUtIYXRpbjRobkNJZz09
     archive_url: https://docs.google.com/document/d/1pe_0aOsI35BEsQJ-FhFH9Z_pWQcU2uqwAnOx2NIx6OY/edit
     recordings_url: https://www.youtube.com/watch?v=phCA5-vWkVM&list=PL69nYSiGNLP2E8vmnqo5MwPOY25sDWIxb
-  - description: Sig-Network and Gateway API Code Jam
+  - description: Sig-Network Code Jam
     day: Friday
     time: "08:30"
     tz: PT (Pacific Time)
