Update core kubernetes slack channel names
rename: kubernetes-contributors -> kubernetes-new-contributors
new: kubernetes-org-memberss

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -272,11 +272,12 @@ channels:
     archived: true
   - name: kubernetes-careers
   - name: kubernetes-client
-  - name: kubernetes-contributors
+  - name: kubernetes-new-contributors
     id: C09R23FHP
   # kubernetes-docs-* channels are defined in sig-docs/
   - name: kubernetes-novice
   - name: kubernetes-operators
+  - name: kubernetes-org-members
   - name: kubernetes-ruby
   - name: kubernetes-security
   - name: kubernetes-streaming
