Add the usergroup "cert-manager-maintainers" (#7368)
* Add the usergroup "cert-manager-maintainers"

Ref: https://github.com/kubernetes/community/issues/7360

* add github-to-slack mapping for cert-manager-maintainers group

I also found that 2 of the GitHub usernames weren't
in the right location.

* cert-manager-maintainers group: explain the users.yaml mapping

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -298,4 +298,24 @@ usergroups:
       - mspreitz
       - ezra
       - paolo
-      
+
+  - name: cert-manager-maintainers
+    long_name: cert-manager Maintainers
+    description: The maintainers of the cert-manager project.
+    channels:
+      - cert-manager-dev
+      - cert-manager
+    # To get that list, run the following:
+    #  curl https://raw.githubusercontent.com/cert-manager/cert-manager/master/OWNERS | yq .approvers
+    # Note that you will then need to find your Slack User ID (look up in Stackoverflow)
+    # and copy it to the users.yaml file in this repository.
+    members:
+      - munnerz
+      - joshvanl
+      - wallrj
+      - jakexks
+      - maelvls
+      - irbekrm
+      - sgtcodfish
+      - inteon
+
