Correcting GitHub username for election exception
Signed-off-by: Bridget Kromhout <bridget@kromhout.org>

--- a/elections/steering/2023/voters.yaml
+++ b/elections/steering/2023/voters.yaml
@@ -595,7 +595,7 @@ eligible_voters:
 - spencerhance
 - spiffxp
 - spowelljr
-- sraghunathan
+- savitharaghunathan
 - srm09
 - starpit
 - stevehipwell
