--- a/elections/steering/2023/voters.yaml
+++ b/elections/steering/2023/voters.yaml
@@ -277,6 +277,7 @@ eligible_voters:
 - jberkus
 - jbpratt
 - jcjesus
+- jeefy
 - Jefftree
 - jeremyrickard
 - jhrozek
@@ -491,6 +492,7 @@ eligible_voters:
 - PiotrProkop
 - pjbgf
 - pkprzekwas
+- pnbrown
 - pohly
 - Pradumnasaraf
 - Prajyot-Parab
@@ -559,6 +561,7 @@ eligible_voters:
 - sashrith
 - SataQiu
 - sathyanarays
+- savitharaghunathan
 - sayantani11
 - sbangari
 - sbueringer
@@ -595,7 +598,6 @@ eligible_voters:
 - spencerhance
 - spiffxp
 - spowelljr
-- savitharaghunathan
 - srm09
 - starpit
 - stevehipwell
