slack-config: add Madhav and Priyanka to GH Admin slack usergroup
This commit adds MadhavJivrajani and Priyankasaggu11929 to the `github-admins`
slack usergroup. As a part of this, their slack IDs are also mapped in users.yaml

Further, Arnaud and Ihor are rotated out.

Signed-off-by: Madhav Jivrajani <madhav.jiv@gmail.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -283,12 +283,12 @@ usergroups:
     long_name: Kubernetes GitHub Admins
     description: Administrators of the Kubernetes GitHub organisations
     members:
-      - ameukam
       - cblecker
-      - idvoretskyi
+      - MadhavJivrajani
       - mrbobbytables
       - nikhita
       - palnabarun
+      - Priyankasaggu11929
 
   - name: kubestellar-devs
     long_name: KubeStellar Development Team
