--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -131,6 +131,7 @@ users:
   liggitt: U0BGPQ6DS
   listx: UFCU8S8P3
   lukehinds: UN2P2M4F4
+  MadhavJivrajani: U01L7R0JGCE
   maelvls: UKYB4CKNJ
   marc-obrien: UL51BRL9Y
   margocrawf: U01FWP2K74J
@@ -177,7 +178,7 @@ users:
   pohly: U91901TMF
   prajyot-parab: U02MVRCN8CX
   prietyc123: U01D4MBLM52
-  psaggu: U012EE74CU8
+  Priyankasaggu11929: U012EE74CU8
   puerco: ULGHLJ7TP
   PurneswarPrasad: U027CFKVAB0
   pweil-: U0AL6882X
