--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -141,6 +141,7 @@ users:
   mattmoyer: U0DRP8H42
   maysunfaisal: U01DEHK2YUB
   mbbroberg: U18JTHMDY
+  mehabhalodiya: U024HPAQDC1
   micahhausler: U1WJ1BZA5
   michael-valdron: U03LXKVS0SX
   mickeyboxell: UH0K0EC6S
@@ -184,6 +185,7 @@ users:
   pweil-: U0AL6882X
   r-lawton: U019CNHR2E6
   rajula96reddy: U7K9EK1HC
+  ramrodo: UU74ZC2RX
   rashmigottipati: U013T1DD3PW
   razashahid107: U05FB1L2YM8
   reylejano: U01GDNJL5MW
@@ -195,6 +197,7 @@ users:
   rtaniwa: U03K27HLHKN
   s-urbaniak: U0DT660QM
   sadysnaat: UNQPKAQHE
+  salaxander: UDHV1RXB2
   sammy: U8NJFL023
   sandipanpanda: U02A47HJ517
   SaranBalaji90: U6PNPSULW
