--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3246,7 +3246,7 @@ workinggroups:
     tz: PT (Pacific Time)
     frequency: biweekly
     url: https://zoom.us/j/92480197536?pwd=dmtSMGJRQmNYYTIyZkFlQ25JRngrdz09
-    archive_url: TBD
+    archive_url: https://docs.google.com/document/d/1RI_EL35MwQxrHqlWvtQNINhOSWergL3hmOSgC5PeZss/edit
     recordings_url: TBD
   contact:
     slack: wg-lts
