--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -93,6 +93,7 @@ users:
   jakexks: U0AKBM9EC
   JamesLaverack: U9MK7274Y
   Jason: UB272379N
+  jasperchui: U01DRL00ES3
   jberkhahn: U7Q21LH2S
   jdumars: U0YJS6LHL
   jeefy: U5MCFK468
@@ -147,7 +148,6 @@ users:
   mickeyboxell: UH0K0EC6S
   microwavables: UAF606ESE
   mik-dass: UCUULSG1W
-  mike-hoang: U03PDV4LS1Z
   ming-qiu: U02JVSL5550
   mjlshen: UN08SUPPD
   mkorbi: UEBLUUA0P
@@ -205,7 +205,6 @@ users:
   savitharaghunathan: UC8U2V3BM
   sayantani11: U028S6XNVSN
   sbueringer: U48TE1L75
-  schultzp2020: U030K8UQA2G
   scott-seago: UHGD79E78
   sethmccombs: U92LLUZ8A
   sgtcodfish: U01PQ8N3PM1
@@ -225,6 +224,7 @@ users:
   tejal29: UACD7R316
   theishshah: U01891A4TRS
   thejoycekung: U01AY4VHX25
+  thepetk: U04NW4PPY8N
   tobiasgiese: U01C1NM8D8F
   tpepper: U6UB5V4TX
   tstromberg: UCSL5SJ8Z
