Add educates channel

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -108,6 +108,7 @@ channels:
   - name: draft-users
   - name: druid-operator
   - name: ebpf
+  - name: educates
   - name: eks
   - name: eksctl
   - name: elastickube
