Update company for Marcel Zieba

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2533,7 +2533,7 @@ sigs:
     chairs:
     - github: marseel
       name: Marcel Zieba
-      company: Google
+      company: Isovalent
     - github: shyamjvs
       name: Shyam Jeedigunta
       company: Amazon
