steering: Update committee members following annual election cycle
Signed-off-by: Stephen Augustus <foo@auggie.dev>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -195,12 +195,12 @@ usergroups:
       - steering-committee
     members:
       - bentheelder
-      - cblecker
-      - cpanato
       - justaugustus
       - mrbobbytables
+      - pacoxu
       - palnabarun
-      - tpepper
+      - pohly
+      - soltysh
 
   - name: grafana-operator-maintainers
     long_name: Grafana Operator Maintainers
