--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -169,6 +169,7 @@ users:
   oscr: U0183J37JUQ
   p0lyn0mial: U1Q8CER5M
   pabloschuhmacher: U01AAGZ06KU
+  pacoxu: UNVHE8R8A
   palnabarun: UBH9NTMBM
   paolo: U01CGS609EY
   paris: U5SB22BBQ
@@ -212,6 +213,7 @@ users:
   shubham-pampattiwar: U01QW84HBBN
   simplytunde: UAY1NBYHE
   Sladyn Nunes: UQ9J177Q8
+  soltysh: U0B4CS1GF
   stevekuznetsov: U0DUKNE6B
   sttts: U0A2VFE8J
   Sujay Pillai: UBW3N1VGW
