--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2120,6 +2120,10 @@ sigs:
     - github: thockin
       name: Tim Hockin
       company: Google
+    tech_leads:
+    - github: danwinship
+      name: Dan Winship
+      company: Red Hat
     emeritus_leads:
     - github: caseydavenport
       name: Casey Davenport
