docs: add tim as signet lead

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2124,6 +2124,9 @@ sigs:
     - github: danwinship
       name: Dan Winship
       company: Red Hat
+    - github: thockin
+      name: Tim Hockin
+      company: Google
     emeritus_leads:
     - github: caseydavenport
       name: Casey Davenport
