slack-config: Archive lokomotive channel
We have archived the lokomotive repository already, more info here:
	https://github.com/kinvolk/lokomotive/issues/1582#issuecomment-1170123280

I've talked with the Lokomotive team at Microsoft and we decided to
archive the slack channel too, as we don't plan to continue developing
the project.

Signed-off-by: Rodrigo Campos <rodrigoca@microsoft.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -309,6 +309,7 @@ channels:
   - name: litmus
   - name: litmus-dev
   - name: lokomotive
+    archived: true
   - name: magnum-cluster-api
   - name: malaysia-users
   - name: malta-users
