Add 2 users to the dra-dev group
Add Atanas and myself to the DRA user group.

--- a/communication/slack-config/sig-node/usergroups.yaml
+++ b/communication/slack-config/sig-node/usergroups.yaml
@@ -11,7 +11,9 @@ usergroups:
       # Sorted alphabetically!
       - bart0sh
       - byako
+      - catblade
       - elezar
       - klihub
       - klueska # subproject owner
+      - obiTrinobiIntel
       - pohly # subproject owner
