--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -33,6 +33,7 @@ users:
   calebamiles: U1ZDD4CUR
   camilamacedo86: UJDM393EH
   castrojo: U1W1Q6PRQ
+  catblade: URCV5RDSB
   cblecker: U3EDWR9FV
   cdrage: U2TU9NPH9
   CecileRobertMichon: U98JPHB2M
@@ -165,6 +166,7 @@ users:
   nprokopic: UR434B8TS
   nrb: U7S597E00
   nzoueidi: UBU72MWP2
+  obiTrinobiIntel: U02UNAXF74H
   onlydole: U1DD4AZND
   oscr: U0183J37JUQ
   p0lyn0mial: U1Q8CER5M
