Changing Jay Vays to Amim Knabben as SIG-Windows tech lead

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3086,12 +3086,12 @@ sigs:
     - github: claudiubelu
       name: Claudiu Belu
       company: Cloudbase Solutions
-    - github: jayunit100
-      name: Jay Vyas
-      company: VMware
     - github: jsturtevant
       name: James Sturtevant
       company: Microsoft
+    - github: knabben
+      name: Amim Knabben
+      company: VMware
     - github: marosset
       name: Mark Rossetti
       company: Microsoft
@@ -3102,6 +3102,8 @@ sigs:
       name: Ben Moss
     - github: ddebroy
       name: Deep Debroy
+    - github: jayunit100
+      name: Jay Vyas
     - github: michmike
       name: Michael Michael
   meetings:
