--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -232,13 +232,12 @@ usergroups:
       - devfile
     members:
       - elsony
-      - feloy
       - jasperchui
+      - Jdubrick
       - johnmcollier
       - kim-tsao
       - maysunfaisal
       - michael-valdron
-      - rm3l
       - rtaniwa
       - thepetk
       - yangcao77
