--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -96,6 +96,7 @@ users:
   Jason: UB272379N
   jasperchui: U01DRL00ES3
   jberkhahn: U7Q21LH2S
+  Jdubrick: U068JS25A03
   jdumars: U0YJS6LHL
   jeefy: U5MCFK468
   jeremyrickard: U72ESU398
