chore: add kyverno-chainsaw slack channel
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -305,6 +305,7 @@ channels:
   - name: kwok
   - name: kwok-dev
   - name: kyverno
+  - name: kyverno-chainsaw
   - name: kyverno-dev
   - name: leadership-summit
     archived: true
