Add #myks Slack channel
Signed-off-by: German Lashevich <german.lashevich@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -358,6 +358,7 @@ channels:
   - name: monolith
     archived: true
   - name: multi-platform
+  - name: myks
   - name: mysql-operator
   - name: nais
   - name: nauticus
