--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -4,6 +4,8 @@ users:
   adheipsingh: T09NY5SBT
   adilGhaffarDev: U038BLZPX1S
   adisky: U9YRVLTEH
+  adityabhatia: U04N6JTDK39
+  akshay196: U0254QBGAAY
   alejandrox1: U6AS37R50
   aleksandra-malinowska: U357LUPHS
   alexander-demicev: UR7UCR7RV
@@ -38,6 +40,7 @@ users:
   cdrage: U2TU9NPH9
   CecileRobertMichon: U98JPHB2M
   cfryanr: U0188B6J42H
+  chandankumar4: U01QKVBNMSL
   chiukapoor: U045T4QQUE6
   chrischdi: UBVL9Q4TB
   chrisshort: U2YGXSD9B
@@ -53,6 +56,7 @@ users:
   davidfestal: U014B06SVJ9
   Debanitrkl: U02149V23EU
   derekwaynecarr: U0A69N5GQ
+  Dhairya-Arora01: U04TXBEMJU9
   dharmit: U0APPPEKE
   dims: U0Y7A2MME
   divya-mohan0209: UV4J7K97Z
@@ -65,6 +69,7 @@ users:
   estroz: UKSEANEC9
   ezra: U8UN4DC4T
   fabianvf: UAJ3UH29F
+  Fedosin: U9Q7EGB7Y
   feiskyer: U0ASA4398
   feloy: UFG7CN85U
   furkatgofurov7: UV31DL3CG
@@ -144,6 +149,7 @@ users:
   mattmoyer: U0DRP8H42
   maysunfaisal: U01DEHK2YUB
   mbbroberg: U18JTHMDY
+  mcbenjemaa: UF111SQ4U
   mehabhalodiya: U024HPAQDC1
   micahhausler: U1WJ1BZA5
   michael-valdron: U03LXKVS0SX
@@ -217,8 +223,10 @@ users:
   simplytunde: UAY1NBYHE
   Sladyn Nunes: UQ9J177Q8
   soltysh: U0B4CS1GF
+  ssuriyan7: U01F68C7VGD
   stevekuznetsov: U0DUKNE6B
   sttts: U0A2VFE8J
+  SubhasmitaSw: U01Q16YA35J
   Sujay Pillai: UBW3N1VGW
   sumitranr: UCQN13L9H
   Sunnatillo: U0261DHJ1Q8
@@ -232,8 +240,10 @@ users:
   thepetk: U04NW4PPY8N
   tobiasgiese: U01C1NM8D8F
   tpepper: U6UB5V4TX
+  troy0820: U3D457W7M
   tstromberg: UCSL5SJ8Z
   Tunde: UAY977ENN
+  typeid: U05M1L6EPS6
   valaparthvi: U016TMJVDAA
   varshaprasad96: UK59YP2DA
   Verolop: U7NNE57PU
@@ -251,4 +261,5 @@ users:
   yangcao77: U01D1VCNJQ3
   yinw: UMVD1GDCY
   ykakarap: U0145EMCA03
+  yrs147: U04CCE1160N
   zubron: U7G0KNS86
