--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -141,6 +141,7 @@ users:
   lukehinds: UN2P2M4F4
   MadhavJivrajani: U01L7R0JGCE
   maelvls: UKYB4CKNJ
+  mansikulkarni96: U01SEDZGPA5
   marc-obrien: UL51BRL9Y
   margocrawf: U01FWP2K74J
   markyjackson-taulia: U19TKJ64E
