add aojea as sig-network TL

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2122,6 +2122,9 @@ sigs:
       name: Tim Hockin
       company: Google
     tech_leads:
+    - github: aojea
+      name: Antonio Ojea
+      company: Google
     - github: danwinship
       name: Dan Winship
       company: Red Hat
