Add gophercloud-maintainers slack user group

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -323,3 +323,13 @@ usergroups:
       - sgtcodfish
       - inteon
 
+  - name: gophercloud-maintainers
+    long_name: Gophercloud Maintainers
+    description: Gophercloud Maintainers group.
+    channels:
+      - gophercloud
+    members:
+      - EmilienM
+      - kayrus
+      - mandre
+      - pierreprinetti
