--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1529,7 +1529,7 @@ sigs:
       company: Cisco
     - github: reylejano
       name: Rey Lejano
-      company: SUSE
+      company: Red Hat
     tech_leads:
     - github: kbhawkey
       name: Karen Bradshaw
