chore: add pepr channel
Signed-off-by: Case Wylie <cmwylie19@defenseunicorns.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -397,6 +397,7 @@ channels:
   - name: outreachy-apps
     id: CDH610735
   - name: paralus
+  - name: pepr
   - name: pharmer
   - name: pinniped
   - name: pl-users
