Add Capi Proxmox Channel
New channel is needed for collaboration

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -78,6 +78,7 @@ channels:
   - name: cluster-api-openstack
   - name: cluster-api-operator
   - name: cluster-api-packet
+  - name: cluster-api-proxmox
   - name: cluster-api-vsphere
   - name: cn-dev
   - name: cn-events
