kube-burner slack channel
Signed-off-by: Raul Sevilla <rsevilla@redhat.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -245,6 +245,7 @@ channels:
   - name: kuadrant
   - name: kube-aws
   - name: kube-bind
+  - name: kube-burner
   - name: kube-deploy
     archived: true
   - name: kube-monkey
