--- a/communication/slack-config/sig-release/usergroups.yaml
+++ b/communication/slack-config/sig-release/usergroups.yaml
@@ -49,16 +49,21 @@ usergroups:
       - sig-release
     members:
       - cpanato # SIG Release Technical Lead
+      - drewhagen # 1.30 Docs Lead
+      - fsmunoz # 1.30 RT Lead Shadow
+      - gracenng # 1.30 RT EA
       - jeremyrickard # SIG Release Chair
       - justaugustus # SIG Release Chair
-      - mehabhalodiya # 1.29 RT Lead Shadow
-      - mickeyboxell # 1.29 RT Lead Shadow
-      - neoaggelos # 1.29 RT Lead Shadow
-      - Priyankasaggu11929 # 1.29 RT Lead
+      - katcosgrove # 1.30 RT Lead
+      - kcmartin # 1.30 Comms Lead
+      - Mohammad Reza Saleh # 1.30 Enhancements Lead
+      - neoaggelos # 1.30 RT Lead Shadow
+      - pacoxu # 1.30 Release Signal Lead
       - puerco # SIG Release Technical Lead
-      - ramrodo # 1.29 RT Lead Shadow
-      - salaxander # 1.29 Emeritus Adviser
+      - ramrodo # 1.30 RT Lead Shadow
+      - rashan # 1.30 Release Notes Lead
       - saschagrunert # SIG Release Chair
+      - Sanchita Mishra # 1.30 RT Lead Shadow
       - Verolop # SIG Release Technical Lead
 
   # Should match SIG Release Leads at all times:
