--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3247,10 +3247,18 @@ workinggroups:
       name: Danielle Lancashire
   meetings:
   - description: Regular Meeting ([Calendar](https://calendar.google.com/calendar/embed?src=8ulop9k0jfpuo0t7kp8d9ubtj4%40group.calendar.google.com))
-    day: Thursdays (starting March 3rd 2022)
-    time: 7AM
+    day: Thursdays (starting February 15th 2024)
+    time: 3PM
+    tz: CET (Central European Time)
+    frequency: monthly
+    url: https://zoom.us/j/98329676612?pwd=c0N2bVV1aTh2VzltckdXSitaZXBKQT09
+    archive_url: https://docs.google.com/document/d/1XOeUN-K0aKmJJNq7H07r74n-mGgSFyiEDQ3ecwsGhec/edit
+    recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP1U1eU1NPyflIGmwzcXPsev
+  - description: Regular Meeting ([Calendar](https://calendar.google.com/calendar/embed?src=8ulop9k0jfpuo0t7kp8d9ubtj4%40group.calendar.google.com))
+    day: Thursdays (starting February 1st 2024)
+    time: 3PM
     tz: PT (Pacific Time)
-    frequency: biweekly
+    frequency: monthly
     url: https://zoom.us/j/98329676612?pwd=c0N2bVV1aTh2VzltckdXSitaZXBKQT09
     archive_url: https://docs.google.com/document/d/1XOeUN-K0aKmJJNq7H07r74n-mGgSFyiEDQ3ecwsGhec/edit
     recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP1U1eU1NPyflIGmwzcXPsev
