Added hydrophone slack channel
Signed-off-by: Ricky Sadowski <richard.j.sadowski@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -168,6 +168,7 @@ channels:
     id: C678BMZ89
   - name: hetzner
   - name: homelab
+  - name: hydrophone
   - name: id-events
   - name: id-users
   - name: il-users
