Update channels.yaml to add channel for in place pod resize feature

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -176,6 +176,7 @@ channels:
   - name: image-builder
   - name: in-dev
   - name: in-events
+  - name: in-place-pod-resize
   - name: in-users
   - name: ingress-nginx-dev
   - name: ingress-nginx-users
