--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -74,6 +74,8 @@ users:
   feiskyer: U0ASA4398
   feloy: UFG7CN85U
   furkatgofurov7: UV31DL3CG
+  fsmunoz: U03DL8UAEMQ
+  fykaa: U04RHLECJGZ
   g-gaston: U01SS3GFELV
   gianarb: U0FSCELCR
   girishramnani: U9M4K75EU
@@ -86,6 +88,7 @@ users:
   hasheddan: ULLQEF30C
   Heba: UHE5TSU4W
   helayoty: UHE5TSU4W
+  hii-arpit: U036P7QB7D5
   hoegaarden: U7VA4RZS9
   hosseinsalahi: U7SR0QJP8
   hubertstefanski: U01941KQ2UT
@@ -155,6 +158,7 @@ users:
   mbbroberg: U18JTHMDY
   mcbenjemaa: UF111SQ4U
   mehabhalodiya: U024HPAQDC1
+  mfahlandt: U01RR6BFC9Y
   micahhausler: U1WJ1BZA5
   michael-valdron: U03LXKVS0SX
   mickeyboxell: UH0K0EC6S
@@ -173,6 +177,7 @@ users:
   ncdc: U0A4MJ62V
   neoaggelos: U02GE88D3SQ
   nikhita: U2PQHGMLN
+  nitishfy: U03AB2YFVGV
   nkubala: UA90QL2BE
   nprokopic: UR434B8TS
   nrb: U7S597E00
@@ -228,6 +233,7 @@ users:
   simplytunde: UAY1NBYHE
   Sladyn Nunes: UQ9J177Q8
   soltysh: U0B4CS1GF
+  sreeram-venkitesh: U03RJ6L977C
   ssuriyan7: U01F68C7VGD
   stevekuznetsov: U0DUKNE6B
   sttts: U0A2VFE8J
