Add KCSEU2024 Comms Lead temporary  to Contributor Communications

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -35,6 +35,7 @@ usergroups:
       - iancoldwater
       - kaslin
       - mfahlandt
+      - natalisucks
       - nitishfy
       - paris
       - sandipanpanda
