--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -172,6 +172,7 @@ users:
   mrbobbytables: U511ZSKHD
   mspreitz: U0E40F05R
   munnerz: U0EC03FTN
+  natalisucks: U01S4LGP3P1
   nate-double-u: U01AWL6BD62
   nawazkh: U03HJN1C81W
   ncdc: U0A4MJ62V
