Add Stefan as tech lead for sig-api-machinery
Stefan has spent eight years working in kubernetes, the majority of
those in the apimachinery area developing key infrastructure like CRDs
and the less glamorous code like code generators.  His knowledge of the
apiserver internals, type system, schemes, generators, clients,
controller libraries, binary helper libraries, and all aspects of the
apimachinery stack are deeper than nearly everyone else.

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -24,6 +24,9 @@ sigs:
     - github: jpbetz
       name: Joe Betz
       company: Google
+    - github: sttts
+      name: Stefan Schimanski
+      company: Upbound
   meetings:
   - description: Kubebuilder Meeting
     day: Thursday
