feat: add a slack channel for the blixt project
Signed-off-by: Shane Utt <shaneutt@linux.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -32,6 +32,7 @@ channels:
   - name: azure-service-operator
   - name: bazel
   - name: bindings-discuss
+  - name: blixt
   - name: bootkube
     archived: true
   - name: bpfman
