feat: add a slack channel for the KNI project
Signed-off-by: Shane Utt <shaneutt@linux.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -473,6 +473,7 @@ channels:
   - name: sig-instrumentation
   - name: sig-multicluster
   - name: sig-network
+  - name: sig-network-kni
   - name: sig-network-multi-network
   # sig-node channels are defined in sig-node/
   - name: sig-scalability
