--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -266,6 +266,7 @@ channels:
   - name: kubectl-trace
   - name: kubectl-validate
   - name: kubedb
+    archived: true
   - name: kubeinit
   - name: kubekhan
     archived: true
@@ -273,6 +274,7 @@ channels:
   - name: kubemove
   - name: kubeone
   - name: kubepack
+    archived: true
   - name: kubestack
   - name: kubestellar-dev
   - name: kuberhealthy
@@ -403,6 +405,7 @@ channels:
   - name: paralus
   - name: pepr
   - name: pharmer
+    archived: true
   - name: pinniped
   - name: pl-users
   - name: podman-desktop
