--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -90,6 +90,7 @@ channels:
   - name: contour
   - name: contributor-summit
   - name: controller-runtime
+  - name: cozystack
   - name: craft
   - name: crash-diagnostics
   - name: crd-installation
