--- a/communication/slack-config/sig-security/config.yaml
+++ b/communication/slack-config/sig-security/config.yaml
@@ -4,4 +4,5 @@ channels:
   - name: sig-security-docs
   - name: sig-security-tooling
   - name: sig-security-assessments
+  - name: sig-security-assess-etcd
   - name: sig-security-assess-vsphere-csi-driver
