Update company affiliation for aravindhp
Updated sigs.yaml and ran `make WHAT=sig-windows generate`

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3106,7 +3106,7 @@ sigs:
     chairs:
     - github: aravindhp
       name: Aravindh Puthiyaparambil
-      company: Red Hat
+      company: Softdrive Technologies Group Inc.
     - github: marosset
       name: Mark Rossetti
       company: Microsoft
