chore: add channel for kubecfg
https://github.com/kubecfg/kubecfg

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -266,6 +266,7 @@ channels:
   - name: kubeapps
   - name: kubebuilder
   - name: kubecon
+  - name: kubecfg
   - name: kubectl-trace
   - name: kubectl-validate
   - name: kubedb
